# Carrot-and-the-stick

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  UBIQUITOUS_LANGUAGE.md  matt-pocock-ai-fundamentals.md  railway.toml
.claude/: settings.json
.claude/commands/: caveman.md  improve-codebase-architecture.md  setup-matt-pocock-skills.md  tdd.md  to-issues.md  to-prd.md  triage.md  write-a-skill.md
.github/workflows/: ci.yml
.scratch/carrot-and-stick-mvp/: PRD.md
backend/: .flake8  Dockerfile  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py  0002_congress_sync_constraints.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  bills.py  enums.py  pledges.py  representatives.py  users.py  votes.py
backend/app/routers/: admin.py  reps.py
backend/app/services/: congress_client.py  congress_sync.py  zip_lookup.py
backend/scripts/: seed_reps.py
backend/tests/: conftest.py  test_admin_sync.py  test_congress_client.py  test_congress_sync.py  test_env_example.py  test_rep_detail.py  test_reps.py  test_schema.py
backend/tests/fixtures/: recent_votes_house.json  vote_detail_house.json
design/: Carrot and the Stick.html  design-chat.md
frontend/: eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.module.css  layout.tsx  page.tsx
frontend/app/reps/: page.tsx  (+1 more)
frontend/components/: RepCard.module.css  RepCard.test.tsx  RepCard.tsx  VoteHistoryTable.module.css  VoteHistoryTable.test.tsx  VoteHistoryTable.tsx
frontend/lib/: api.ts
frontend/src/: App.test.tsx
(+2 files in other folders)
